--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -8,21 +8,22 @@
     </head>
 
     <body>
+        <h2>Our Menu</h2>
         <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12">
-                <div class="title">Chicken</div>
+            <div class="col-lg-4 col-md-6 col-sm-12" id="chicken-text">
+                <div class="title" id="chicken-title"><b>Chicken</b></div>
                 <div class="text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dictum, sem eu imperdiet ultricies, nunc enim auctor nunc, nec scelerisque erat leo eu purus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nunc in porttitor tortor. Cras vestibulum turpis vel nunc dictum, et posuere dui elementum.
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-                <div class="title">Beef</div>
+            <div class="col-lg-4 col-md-6 col-sm-12" id="beef-text">
+                <div class="title" id="beef-title"><b>Beef</b></div>
                 <div class="text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dictum, sem eu imperdiet ultricies, nunc enim auctor nunc, nec scelerisque erat leo eu purus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nunc in porttitor tortor. Cras vestibulum turpis vel nunc dictum, et posuere dui elementum.
                 </div>
             </div>
-            <div class="col-lg-4 col-md-12 col-sm-12">
-                <div class="title">Sushi</div>
+            <div class="col-lg-4 col-md-12 col-sm-12" id="sushi-text">
+                <div class="title" id="sushi-title"><b>Sushi</b></div>
                 <div class="text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dictum, sem eu imperdiet ultricies, nunc enim auctor nunc, nec scelerisque erat leo eu purus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nunc in porttitor tortor. Cras vestibulum turpis vel nunc dictum, et posuere dui elementum.
                 </div>
